# egiljones_encoder

./: README.md
src/encoder_msgs/: CMakeLists.txt  package.xml
src/encoder_msgs/msg/: Int64Stamped.msg
src/encoder_odometry/: CMakeLists.txt  package.xml
src/encoder_odometry/include/encoder_odometry/: odometry_wheels.h  odometry_wheels_helpers.h
src/encoder_odometry/src/: odometry_wheels.cpp  odometry_wheels_main.cpp  simulated_wheels.cpp  test_odometry_wheels.cpp
