<?xml version="1.0"?>
<package format="2">
  <name>encoder_msgs</name>
  <version>0.0.0</version>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
