<?xml version="1.0"?>
<package format="2">
  <name>encoder_odometry</name>
  <version>0.0.0</version>
  <description>Test odometry</description>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>encoder_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
